# world_vision_prototype

./: README.md
backend/: fft.db  main.py  pyproject.toml  requirements.txt
backend/Config/: database.py  settings.py
backend/Controller/: controller.py
backend/Middleware/: auth_middleware.py
backend/Model/: Model.py
backend/Respositories/: repositories.py
backend/Service/: services.py
frontend/: app.json  package-lock.json  package.json  skills-lock.json
frontend/.agents/agents/: mobile-ui-designer.agent.md
frontend/Service/: api.ts
frontend/app/: _layout.tsx  _root-layout.tsx  index.tsx
frontend/app/(df)/: _layout.tsx  budget.tsx  dashboard.tsx  expense.tsx  myexpenses.tsx
frontend/app/(dme)/: dashboard.tsx  review.tsx  targets.tsx
frontend/app/(office)/: _layout.tsx  budgets.tsx  dashboard.tsx  reconcile.tsx  reports.tsx  review.tsx
frontend/components/: Button.tsx  ResponsiveImage.tsx  Typography.tsx  index.ts
frontend/components/df/: DetailModel.tsx
frontend/components/dme/: AddTargetModal.tsx  AlertCard.tsx  Header.tsx  QuickActions.tsx  ReviewModal.tsx  ReviewQueue.tsx  StatCard.tsx  TargetCard.tsx  TargetRow.tsx  TargetsOverview.tsx  TxnCard.tsx
frontend/components/office/: ActivitySummaryReport.tsx  BudgetCard.tsx  BurnBar.tsx  (+24 more)
frontend/constants/: office.ts
frontend/context/: AuthContext.tsx
frontend/data/: mockData.ts
frontend/shared/: constants.ts  hooks.ts  index.ts  types.ts  utils.ts
frontend/theme/: base.ts  index.ts  responsive.ts  visual-effects.ts
frontend/types/: dme-types.ts  index.ts  target-types.ts
(+43 files in other folders)
